# cmake-tutorial

./: .gitignore  README.md
code/Step1/: takeaways.md  tutorial.cxx
code/Step2/: CMakeLists.txt
code/Step2/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
code/Step2_build/: takeaways.md
code/Step3/MathFunctions/: CMakeLists.txt
more_modern_cmake/: README.md
more_modern_cmake/code/: CMakeLists.txt  main.cpp  simple_lib.cpp
official_tutorial/: takeaways.md
official_tutorial/Step1/: CMakeLists.txt  tutorial.cxx
official_tutorial/Step10/: CMakeLists.txt
official_tutorial/Step10/MathFunctions/: CMakeLists.txt
official_tutorial/Step11/: CMakeLists.txt
official_tutorial/Step11/MathFunctions/: CMakeLists.txt
official_tutorial/Step1_build/: Tutorial
official_tutorial/Step2/: CMakeLists.txt
official_tutorial/Step2/MathFunctions/: CMakeLists.txt
official_tutorial/Step3/: CMakeLists.txt
official_tutorial/Step3/MathFunctions/: CMakeLists.txt
official_tutorial/Step3_build/: takeaways.md
official_tutorial/Step4/: CMakeLists.txt
official_tutorial/Step4_build/: takeaways.md
official_tutorial/Step5/: CMakeLists.txt
official_tutorial/Step5/MathFunctions/: CMakeLists.txt
official_tutorial/Step7/MathFunctions/: CMakeLists.txt  mysqrt.cxx
official_tutorial/Step8/MathFunctions/: CMakeLists.txt  MakeTable.cmake  mysqrt.cxx
